--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,13 @@
 			<artifactId>spring-batch-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+  <groupId>jakarta.persistence</groupId>
+  <artifactId>jakarta.persistence-api</artifactId>
+  <version>3.1.0</version>
+</dependency>
+		
 	</dependencies>
 
 	<build>
