Connected to Mongo Db

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,12 @@ spring.application.name=StudentAdmission
 # H2 Database configuration
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.username=  sa
+spring.datasource.password= 
 spring.h2.console.enabled=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# MongoDB configuration
+spring.data.mongodb.uri=  mongodb://localhost:27017/StudentsAdmission
+
+#mongodb://MongoDBUser:Mongodb%40786@localhost:27017/?authSource=Mongodb%40786 /
